Step 0.70 of the BlaPlugin..rewrote the bait and switch part for CharBuffers instead