@@ -11,7 +11,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.StringWriter;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -22,50 +21,49 @@ import java.util.List;
 public class BlaTest {
     public static void main(String[] args) throws IOException {
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
-        SimpleFileManager fileManager = new SimpleFileManager(compiler.getStandardFileManager(null, null, null));
-        List<BlaSimpleJavaFileObject> compilationUnits = List.of(new BlaSimpleJavaFileObject("C:\\Users\\mabdelghany\\Desktop\\Bla.java", JavaFileObject.Kind.SOURCE));
-        List<String> arguments = List.of("-classpath", "/Temp/jops/target/classes", "-Xplugin:" + BlaPlugin.NAME);
-        StringWriter output = new StringWriter();
+//        SimpleFileManager fileManager = new SimpleFileManager(compiler.getStandardFileManager(null, null, null));
+//        List<BlaSimpleJavaFileObject> compilationUnits = List.of(new BlaSimpleJavaFileObject("C:\\Users\\mabdelghany\\Desktop\\Bla.java", JavaFileObject.Kind.SOURCE));
+//        List<String> arguments = List.of("-classpath", "/Temp/jops/target/classes", "-Xplugin:" + BlaPlugin.NAME);
+//        StringWriter output = new StringWriter();
 
-        JavaCompiler.CompilationTask task = compiler.getTask(output, fileManager, null, arguments, null, compilationUnits);
-        task.call();
+//        JavaCompiler.CompilationTask task = compiler.getTask(output, fileManager, null, arguments, null, compilationUnits);
+//        task.call();
+//        fileManager.getCompiled().iterator().next().getCompiledBinaries();
 
-        compiler.run(null, System.out, System.err, "C:\\Users\\mabdelghany\\Desktop\\Bla.java");
+        compiler.run(null, System.out, System.err, "-classpath", "/Temp/jops/target/classes", "-Xplugin:" + BlaPlugin.NAME, "C:\\Users\\mabdelghany\\Desktop\\Bla.java");
 
-        BlaParser bla = new BlaParser(Files.readString(Paths.get("C:\\Users\\mabdelghany\\Desktop\\Bla.java")));
-        String parse = bla.parseAndReplace();
+//        BlaParser bla = new BlaParser(Files.readString(Paths.get("C:\\Users\\mabdelghany\\Desktop\\Bla.java")));
+//        String parse = bla.parseAndReplace();
         System.out.println("Yahooooo!");
     }
 
     static class BlaSimpleJavaFileObject extends SimpleJavaFileObject {
-        private String                fileContent;
-        private ByteArrayOutputStream out;
+        private String fileContent;
 
         protected BlaSimpleJavaFileObject(final String filename, final Kind kind) {
             super(new File(filename).toURI(), kind);
             try {
-                fileContent = new String(Files.readAllBytes(Paths.get(filename)), StandardCharsets.UTF_8);
+                fileContent = Files.readString(Paths.get(filename));
             } catch (IOException e) {
                 e.printStackTrace();
             }
-        }
-
-        public BlaSimpleJavaFileObject(URI uri, Kind kind, String fileContent) {
-            super(uri, kind);
-            this.fileContent = fileContent;
         }
 
         @Override
         public CharSequence getCharContent(boolean ignoreEncodingErrors) throws IOException {
             return fileContent;
         }
+    }
 
-        public void setFileContent(String fileContent) {
-            this.fileContent = fileContent;
+    static class BlaSimpleClassFile extends SimpleJavaFileObject {
+        private ByteArrayOutputStream out;
+
+        protected BlaSimpleClassFile(URI uri, Kind kind) {
+            super(uri, kind);
         }
 
         @Override
-        public OutputStream openOutputStream() throws IOException {
+        public OutputStream openOutputStream() {
             return out = new ByteArrayOutputStream();
         }
 
@@ -74,10 +72,9 @@ public class BlaTest {
         }
     }
 
-
     static class SimpleFileManager extends ForwardingJavaFileManager<StandardJavaFileManager> {
 
-        private final List<BlaSimpleJavaFileObject> compiled = new ArrayList<>();
+        private final List<BlaSimpleClassFile> compiled = new ArrayList<>();
 
         public SimpleFileManager(StandardJavaFileManager delegate) {
             super(delegate);
@@ -85,7 +82,7 @@ public class BlaTest {
 
         @Override
         public JavaFileObject getJavaFileForOutput(Location location, String className, JavaFileObject.Kind kind, FileObject sibling) {
-            BlaSimpleJavaFileObject result = new BlaSimpleJavaFileObject(URI.create("string://" + className).toString(), JavaFileObject.Kind.CLASS);
+            final BlaSimpleClassFile result = new BlaSimpleClassFile(URI.create("string://" + className), JavaFileObject.Kind.CLASS);
             compiled.add(result);
             return result;
         }
@@ -93,7 +90,7 @@ public class BlaTest {
         /**
          * @return compiled binaries processed by the current class
          */
-        public List<BlaSimpleJavaFileObject> getCompiled() {
+        public List<BlaSimpleClassFile> getCompiled() {
             return compiled;
         }
     }
